# spectrust

./: CONTRIBUTION.md  HISTORY.md  LICENCE  README.md  setup.py
spectrust/: __init__.py  __version__.py  api.py  batch.py
spectrust/_spectro/: Cargo.toml
spectrust/_spectro/src/: lib.rs
